@@ -104,7 +104,7 @@ void	 printcard __P((WINDOW *, int, CARD, BOOLEAN));
 void	 prpeg __P((int, int, BOOLEAN));
 void	 prtable __P((int));
 int	 readchar __P((void));
-void	 rint __P((int)) __attribute__((__noreturn__));
+void	 receive_int __P((int)) __attribute__((__noreturn__));
 int	 score __P((BOOLEAN));
 int	 scorehand __P((const CARD [], CARD, int, BOOLEAN, BOOLEAN));
 void	 shuffle __P((CARD []));
